--- a/package.json
+++ b/package.json
@@ -92,9 +92,15 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "html-webpack-plugin": "^4.5.0",
     "less-loader": "^5.0.0",
+    "mock": "^0.1.1",
+    "path": "^0.12.7",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-dev-server": "^3.11.1"
   },
