--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "js-export-excel": "^1.1.4",
     "less": "^4.1.1",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -97,10 +98,13 @@
     "html-webpack-plugin": "^4.5.0",
     "less-loader": "^5.0.0",
     "mock": "^0.1.1",
+    "mockjs": "^1.1.0",
     "path": "^0.12.7",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.44.2",
     "webpack-dev-server": "^3.11.1"
   },
